# paymentFraudPipeline

./: PaymentFraudPipeline-Walkthrough.md  README.md  credentials.env  pipeline.excalidraw  project_overview.excalidraw  pyproject.toml
scripts/: __init__.py  deploy.py
scripts/common/: __init__.py  capture_kafka_to_csv.py  credentials.py  destroy.py  generate_deployment_summary.py  logging_utils.py  login_checks.py  publish_csv_to_kafka.py  terraform.py  terraform_runner.py  tfvars.py  ui.py
terraform/core/: main.tf  outputs.tf  variables.tf  versions.tf
terraform/fintech_lab/: main.tf  outputs.tf  providers.tf  variables.tf
terraform/payment_fraud_pipeline/: main.tf  outputs.tf  variables.tf
