[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "payment_fraud_pipeline"
version = "0.1.0"
description = "Confluent ML Functions Quickstart. Build real-time ML pipelines with Confluent Cloud."
readme = "README.md"
authors = [
    { name = "Confluent", email = "support@confluent.io" }
]
license = { text = "Apache-2.0" }
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: Apache Software License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Database",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Distributed Computing",
]
keywords = [
    "confluent", "kafka", "flink", "streaming", "ml-functions",
    "machine-learning", "real-time", "data-pipelines"
]
requires-python = ">=3.10"

# Core dependencies
dependencies = [
    "python-dotenv>=1.0.0,<2.0",
    "confluent-kafka[avro,schema-registry]>=2.3.0",
    "faker>=20.0.0",
]

# Optional dependencies for enhanced functionality
[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-timeout>=2.2.0",
    "pytest-order>=1.2.0",
    "ruff>=0.9.0",
    "mypy>=1.0.0",
    "detect-secrets>=1.5.0",
    "pre-commit>=3.5.0",
]


[project.scripts]
deploy = "scripts.deploy:main"
destroy = "scripts.common.destroy:main"
#
generate_deployment_summary = "scripts.common.generate_deployment_summary:main"
generate-deployment-summary = "scripts.common.generate_deployment_summary:main"
deployment_summary = "scripts.common.generate_deployment_summary:main"
#
deployment-summary = "scripts.common.generate_deployment_summary:main"
#


[project.urls]
Homepage = "https://github.com/rajnishshaw/paymentFraudPipeline"
Repository = "https://github.com/rajnishshaw/paymentFraudPipeline"
Issues = "https://github.com/confluentinc/quickstart-ai-ml-functions/issues"

# Hatchling build configuration
[tool.hatch.build.targets.wheel]
packages = ["scripts"]

[tool.hatch.build.targets.sdist]
include = [
    "scripts/",
    "README.md",
    "LICENSE",
]
exclude = [
    "/.git",
    "/.github",
    "/terraform",
    "/assets",
    "*.pyc",
    "__pycache__",
]

# Development tools configuration
[tool.ruff]
line-length = 120
target-version = "py310"
exclude = [
    ".git",
    ".venv",
    "venv",
    "__pycache__",
    ".pytest_cache",
]

[tool.ruff.lint]
select = [
    "E", # pycodestyle errors
    "W", # pycodestyle warnings
    "F", # pyflakes
    "I", # isort
    "UP", # pyupgrade — modernize syntax
    "B", # flake8-bugbear — catches real bugs
    "RUF", # ruff-native rules
]
ignore = [
    "E501", # line too long — handled by ruff format, not enforced on comments/strings
]

[tool.ruff.lint.isort]
known-first-party = ["scripts"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

[tool.mypy]
exclude = ["scripts/tests/.*"]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[tool.pytest.ini_options]
testpaths = ["scripts/tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "--verbose",
    "-s", # Show output in real-time (capture=no)
]
